gap between sections issue solved

--- a/code/style.css
+++ b/code/style.css
@@ -16,6 +16,7 @@ body {
 /***header***/
 header {
   position: relative;
+  margin: 0 auto;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -111,10 +112,6 @@ nav a {
 
 /***header for tablet/mobile***/
 @media screen and (max-width: 1020px) {
-  header {
-    height: 120vh;
-  }
-
   div.header-text h1 {
     top: 40%;
   }
@@ -144,13 +141,6 @@ nav a {
     left: 0;
     overflow: hidden;
     z-index: -1;
-  }
-}
-
-/***header for mobile***/
-@media screen and (max-width: 700px) {
-  header {
-    height: 140vh;
   }
 }
 
